--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,10 @@
               <a class="nav-link" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="signup.html">Sign Up/ Log in</a>
+              <a class="nav-link" href="signup.html">Sign Up</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="signup.html">Log in</a>
             </li>
           </ul>
         </div>
