--- a/faq.html
+++ b/faq.html
@@ -12,52 +12,125 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>Frequently Asked Questions</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">MyHealthTrail</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="faq.html">FAQ</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="signup.html">Sign Up</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link" href="signup.html">Log in</a>
-            </li>
-          </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container">
+              <a class="navbar-brand" href="#">MyHealthTrail</a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="blog.html">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="faq.html">FAQ</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="signup.html">Sign Up</a>
+                  </li>
+                   <li class="nav-item">
+                    <a class="nav-link" href="signup.html">Log in</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
+    </header>
+    <section id="faqs" class="my-mt">
+        <div class="container w-75">
+            <div class="mx-auto">
+                <div class="text-center">
+                    <p class="text-red mb-0 fs-4">
+                        Got Questions?
+                    </p>
+                    <h2 class="text-dark fw-bold display-6 mb-5 pb-5">Frequently Asked Questions</h2>
+                </div>
+                <div class="accordion accordion-flush pb-5" id="accordionFlushExample">
+                    <div class="accordion-item border border-secondary py-3">
+                      <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button fw-bold collapsed shadow-none fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </button>
+                      </h2>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne">
+                        <div class="accordion-body fs-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus qui esse, numquam sapiente obcaecati itaque! Earum quia quos deleniti ipsa, nihil nam magnam corrupti officiis repudiandae fugit provident exercitationem aliquid!</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item border border-secondary py-3">
+                      <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button fw-bold collapsed shadow-none fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </button>
+                      </h2>
+                      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo">
+                        <div class="accordion-body fs-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus qui esse, numquam sapiente obcaecati itaque! Earum quia quos deleniti ipsa, nihil nam magnam corrupti officiis repudiandae fugit provident exercitationem aliquid!</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item border border-secondary py-3">
+                      <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button fw-bold collapsed shadow-none fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </button>
+                      </h2>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree">
+                        <div class="accordion-body fs-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus qui esse, numquam sapiente obcaecati itaque! Earum quia quos deleniti ipsa, nihil nam magnam corrupti officiis repudiandae fugit provident exercitationem aliquid!</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item border border-secondary py-3">
+                      <h2 class="accordion-header" id="four">
+                        <button class="accordion-button fw-bold collapsed shadow-none fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </button>
+                      </h2>
+                      <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="four">
+                        <div class="accordion-body fs-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus qui esse, numquam sapiente obcaecati itaque! Earum quia quos deleniti ipsa, nihil nam magnam corrupti officiis repudiandae fugit provident exercitationem aliquid!</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item border border-secondary py-3">
+                      <h2 class="accordion-header" id="five">
+                        <button class="accordion-button fw-bold collapsed shadow-none fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </button>
+                      </h2>
+                      <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="five">
+                        <div class="accordion-body fs-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus qui esse, numquam sapiente obcaecati itaque! Earum quia quos deleniti ipsa, nihil nam magnam corrupti officiis repudiandae fugit provident exercitationem aliquid!</div>
+                      </div>
+                    </div>
+                </div>
+                <p class="text-secondary text-center fw-bold">
+                    Still got questions? Send us a message 
+                    <a href="contact.html">here</a>
+                </p>
+            </div>
         </div>
-      </div>
-    </nav>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
