ch: completed faq section

--- a/faq.html
+++ b/faq.html
@@ -74,7 +74,7 @@
                 <div class="accordion accordion-flush pb-5" id="accordionFlushExample">
                     <div class="accordion-item border border-secondary py-3">
                       <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button fw-bold collapsed shadow-none fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <button class="accordion-button fw-bold collapsed shadow-none fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         </button>
                       </h2>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="accordion-item border border-secondary py-3">
                       <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button fw-bold collapsed shadow-none fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        <button class="accordion-button fw-bold collapsed shadow-none fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         </button>
                       </h2>
@@ -94,7 +94,7 @@
                     </div>
                     <div class="accordion-item border border-secondary py-3">
                       <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button fw-bold collapsed shadow-none fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        <button class="accordion-button fw-bold collapsed shadow-none fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         </button>
                       </h2>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="accordion-item border border-secondary py-3">
                       <h2 class="accordion-header" id="four">
-                        <button class="accordion-button fw-bold collapsed shadow-none fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                        <button class="accordion-button fw-bold collapsed shadow-none fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         </button>
                       </h2>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="accordion-item border border-secondary py-3">
                       <h2 class="accordion-header" id="five">
-                        <button class="accordion-button fw-bold collapsed shadow-none fs-6" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                        <button class="accordion-button fw-bold collapsed shadow-none fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         </button>
                       </h2>
@@ -123,7 +123,7 @@
                       </div>
                     </div>
                 </div>
-                <p class="text-secondary text-center fw-bold">
+                <p class="text-secondary text-center fw-bold fs-6">
                     Still got questions? Send us a message 
                     <a href="contact.html">here</a>
                 </p>
