added testimonial section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <div class="woman_img"></div>
               <p>
                 <strong>Sally Shaaba</strong> <br />
-                Lagos, Nigeria.
+                NewYork, USA.
               </p>
             </div>
           </div>
@@ -135,7 +135,7 @@
               <div class="woman_img"></div>
               <p>
                 <strong>Sally Shaaba</strong> <br />
-                Accra, Ghana.
+                NewYork, USA.
               </p>
             </div>
           </div>
