Revert "Merge branch 'main' into master"
This reverts commit 1dcae667d1e57ab94f0908275bc66ba44db76747, reversing
changes made to e19d8a1567ac029f1c93f784bf8872f577288536.

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
     <title>MyHealthTrail</title>
 </head>
 <body>
-   <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">MyHealthTrail</a>
         <button
@@ -42,26 +42,6 @@
             <li class="nav-item">
               <a class="nav-link" href="blog.html">Blog</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="faq.html">FAQ</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="signup.html">Sign Up</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link" href="login.html">Log in</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
             <h2>Are you Pregnant?</h2>
             
             <p>Everyone experience different signs of pregnancy. so
@@ -187,6 +167,29 @@
                 </ul>
               </ul>
 
+            </p>
+            
+
+
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="signup.html">Sign Up</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="signup.html">Log in</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <footer>
       <div class="container">
