--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="signup.html">Sign Up</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="login.html">Log in</a>
+              <a class="nav-link" href="signup.html">Log in</a>
             </li>
           </ul>
         </div>
