--- a/about.html
+++ b/about.html
@@ -17,6 +17,52 @@
     <title>MyHealthTrail</title>
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">MyHealthTrail</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="signup.html">Sign Up</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="login.html">Log in</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      </nav>
+    
  
 <!-----------------------------ABOUT SECTION----------------->
   </section>
@@ -28,7 +74,7 @@
            temporibus tenetur cupiditate rerum, omnis quos voluptates consectetur a. Voluptatibus temporibus sunt nobis obcaecati
             nisi enim non, iusto fugiat et, veniam laboriosam veritatis harum?
         </p>
-      </div>
+=======
 <div class="row">
 <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center
 align-items-stretch position-relative">
