--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://kit.fontawesome.com/kitcode.js" crossorigin="anonymous"> </script>
-    <script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"> </script>
+
     <title>MyHealthTrail</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">MyHealthTrail</a>
@@ -51,10 +48,10 @@
             <li class="nav-item">
               <a class="nav-link" href="faq.html">FAQ</a>
             </li>
-           <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="signup.html">Sign Up</a>
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="signup.html">Log in</a>
             </li>
           </ul>
@@ -62,63 +59,140 @@
       </div>
     </nav>
 
+    <!-- TESTIMONIALS -->
+    <section id="testimonials">
+      <div class="testimonials_div">
+        <p>Our Testimonials</p>
+        <h2>What Our Valuable Clients Say</h2>
+        <img class="quote_img" src="img/quote (1).png" alt="" />
+      </div>
+
+      <div class="clients_div row">
+        <div class="col-lg-4">
+          <div class="individual_client">
+            <i class="fa-solid fa-quote-left"></i>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
+              obcaecati officiis. Dolorem, dolor tenetur ab rem numquam quas
+              nostrum, quia delectus facere ad sunt, doloribus voluptas
+              veritatis reprehenderit esse quaerat!
+            </p>
+            <div class="client_info">
+              <div class="woman_img"></div>
+              <p>
+                <strong>Sally Shaaba</strong> <br />
+                NewYork, USA.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="individual_client">
+            <i class="fa-solid fa-quote-left"></i>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
+              obcaecati officiis. Dolorem, dolor tenetur ab rem numquam quas
+              nostrum, quia delectus facere ad sunt, doloribus voluptas
+              veritatis reprehenderit esse quaerat!
+            </p>
+            <div class="client_info">
+              <div class="woman_img"></div>
+              <p>
+                <strong>Sally Shaaba</strong> <br />
+                NewYork, USA.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="individual_client">
+            <i class="fa-solid fa-quote-left"></i>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
+              obcaecati officiis. Dolorem, dolor tenetur ab rem numquam quas
+              nostrum, quia delectus facere ad sunt, doloribus voluptas
+              veritatis reprehenderit esse quaerat!
+            </p>
+            <div class="client_info">
+              <div class="woman_img"></div>
+              <p>
+                <strong>Sally Shaaba</strong> <br />
+                NewYork, USA.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="container">
         <div class="row">
-            <div class="col-sm-4">
-                <!-- Content -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                  <i class="fas fa-gem me-3 text-secondary"></i>MyHealthTrail
-                </h6>
-                <img src="./img/smiling-young-pregnant-african-woman-using-tablet-computer.jpg" alt="Error"
-                style="width: 200px; height:200px; border-radius: 50%;">
-              </div>
-          
-              <div class="col-sm-4">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                  Useful links
-                </h6>
-                <p>
-                  <a class="nav-link" href="blog.html">Blog</a>
-                </p>
-                <p>
-                  <a class="nav-link" href="services.html">Services</a>
-                </p>
-                <p>
-                  <a class="nav-link" href="faq.html">FAQ</a>
-                </p>
-                <p>
-                  <a class="nav-link" href="about.html">About</a>
-                </p>
-              </div>
-              <div class="col-sm-4">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                <p><i class="fas fa-home me-3 text-secondary"></i> New York, NY 10012, US</p>
-                <p>
-                  <i class="fas fa-envelope me-3 text-secondary"></i>
-                  info@example.com
-                </p>
-                <p><i class="fas fa-phone me-3 text-secondary"></i> + 01 234 567 88</p>
-                <p><i class="fas fa-print me-3 text-secondary"></i> + 01 234 567 89</p>
-              </div>
-              <section class="d-flex justify-content-center p-1 border-top"
-              style="text-align:center;">
-                <div>
-                  <a href="#" class="fa fa-facebook"></a>
-                  <a href="#" class="fa fa-twitter"></a>
-                  <a href="#" class="fa fa-google"></a>
-                  <a href="#" class="fa fa-linkedin"></a>
-                  <a href="#" class="fa fa-instagram"></a>
-                </div>
-              </section>
-              <div style="text-align: center; color: black;">
-                <p>&copy; Copyright 2022 MyHealthTrail.org</p>
-                
-              </div>
+          <div class="col-sm-4">
+            <!-- Content -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-gem me-3 text-secondary"></i>MyHealthTrail
+            </h6>
+            <img
+              src="./img/smiling-young-pregnant-african-woman-using-tablet-computer.jpg"
+              alt="Error"
+              style="width: 200px; height: 200px; border-radius: 50%"
+            />
+          </div>
+
+          <div class="col-sm-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
+            <p>
+              <a class="nav-link" href="blog.html">Blog</a>
+            </p>
+            <p>
+              <a class="nav-link" href="services.html">Services</a>
+            </p>
+            <p>
+              <a class="nav-link" href="faq.html">FAQ</a>
+            </p>
+            <p>
+              <a class="nav-link" href="about.html">About</a>
+            </p>
+          </div>
+          <div class="col-sm-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+            <p>
+              <i class="fas fa-home me-3 text-secondary"></i> New York, NY
+              10012, US
+            </p>
+            <p>
+              <i class="fas fa-envelope me-3 text-secondary"></i>
+              info@example.com
+            </p>
+            <p>
+              <i class="fas fa-phone me-3 text-secondary"></i> + 01 234 567 88
+            </p>
+            <p>
+              <i class="fas fa-print me-3 text-secondary"></i> + 01 234 567 89
+            </p>
+          </div>
+          <section
+            class="d-flex justify-content-center p-1 border-top"
+            style="text-align: center"
+          >
+            <div>
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-google"></a>
+              <a href="#" class="fa fa-linkedin"></a>
+              <a href="#" class="fa fa-instagram"></a>
+            </div>
+          </section>
+          <div style="text-align: center; color: black">
+            <p>&copy; Copyright 2022 MyHealthTrail.org</p>
+          </div>
         </div>
       </div>
-      </footer>
-</body>
+    </footer>
+  </body>
 </html>
