--- a/login.html
+++ b/login.html
@@ -11,114 +11,44 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/kitcode.js" crossorigin="anonymous"> </script>
     <script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"> </script>
     <title>MyHealthTrail</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
+   
+    <!-- login form -->
+    <section id="login">
       <div class="container">
-        <a class="navbar-brand" href="#">MyHealthTrail</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="faq.html">FAQ</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="signup.html">Sign Up</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link" href="signup.html">Log in</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+        <form>
+          <p>Sign in</p>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email@gmail.com">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter at least 8+ characters">
+          </div>
+          <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Remember me?</label>
+            <label class="form-check-label" for="exampleCheck1">Forgot Password</label>
 
-    <footer>
-      <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <!-- Content -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                  <i class="fas fa-gem me-3 text-secondary"></i>MyHealthTrail
-                </h6>
-                <img src="./img/smiling-young-pregnant-african-woman-using-tablet-computer.jpg" alt="Error"
-                style="width: 200px; height:200px; border-radius: 50%;">
-              </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Sign in</button>
+          <small>Don't have an account? <a href="./signup.html">Sign in</a></small>
           
-              <div class="col-sm-4">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                  Useful links
-                </h6>
-                <p>
-                  <a class="nav-link" href="blog.html">Blog</a>
-                </p>
-                <p>
-                  <a class="nav-link" href="services.html">Services</a>
-                </p>
-                <p>
-                  <a class="nav-link" href="faq.html">FAQ</a>
-                </p>
-                <p>
-                  <a class="nav-link" href="about.html">About</a>
-                </p>
-              </div>
-              <div class="col-sm-4">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                <p><i class="fas fa-home me-3 text-secondary"></i> New York, NY 10012, US</p>
-                <p>
-                  <i class="fas fa-envelope me-3 text-secondary"></i>
-                  info@example.com
-                </p>
-                <p><i class="fas fa-phone me-3 text-secondary"></i> + 01 234 567 88</p>
-                <p><i class="fas fa-print me-3 text-secondary"></i> + 01 234 567 89</p>
-              </div>
-              <section class="d-flex justify-content-center p-1 border-top"
-              style="text-align:center;">
-                <div>
-                  <a href="#" class="fa fa-facebook"></a>
-                  <a href="#" class="fa fa-twitter"></a>
-                  <a href="#" class="fa fa-google"></a>
-                  <a href="#" class="fa fa-linkedin"></a>
-                  <a href="#" class="fa fa-instagram"></a>
-                </div>
-              </section>
-              <div style="text-align: center; color: black;">
-                <p>&copy; Copyright 2022 MyHealthTrail.org</p>
-                
-              </div>
+        </form>
+        </form>
+        <div class="form_logo">
         </div>
       </div>
-      </footer>
+
+    </section>
+
+   
 </body>
 </html>
