--- a/CONTACTtest.html
+++ b/CONTACTtest.html
@@ -27,6 +27,10 @@ body {
   background: #e48adf;
 }
 
+h1{
+    text-align: center;
+}
+
 .container {
   max-width: 400px;
   width: 100%;
@@ -149,27 +153,36 @@ fieldset {
 </head>
 
 <body>
-    <h1>Get In Touch</h1>
-          <div class="container">  
+        <div class="container">  
+            
             <form id="contact" action="" method="post">
+
+                <h1>Get In Touch</h1><br>
+
               <fieldset>
                 <input placeholder="Your name" type="text" tabindex="1" required autofocus>
               </fieldset>
+
               <fieldset>
                 <input placeholder="Your Email Address" type="email" tabindex="2" required>
               </fieldset>
+
               <fieldset>
                 <input placeholder="Your Phone Number (optional)" type="tel" tabindex="3" required>
               </fieldset>
+
               <fieldset>
                 <input placeholder="Subject (optional)" type="text" tabindex="4" required>
               </fieldset>
+
               <fieldset>
                 <textarea placeholder="Type your message here...." tabindex="5" required></textarea>
               </fieldset>
+
               <fieldset>
                 <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
               </fieldset>
-          </div>
+              </form>
+        </div>
   </body>
 </html>
