--- a/about.html
+++ b/about.html
@@ -14,67 +14,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/kitcode.js" crossorigin="anonymous"> </script>
     <script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"> </script>
-    <link rel="stylesheet" href="index.css">
     <title>MyHealthTrail</title>
 </head>
 <body>
+  <section id="Home" class="d-flex align-items-center">
+    <div class="container">
+      <h1>Welcome to MyHealthTrail</h1>
+      <h2>We are a team of Specialized Doctors.<br>"Your devotion and care bring healing, comfort and hope."</h2>
+      <a href="about us" class="btn-get-started scrollto">Learn more</a>
 
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">MyHealthTrail</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="faq.html">FAQ</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="signup.html">Sign Up</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link" href="login.html">Log in</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      </nav>
-    
- 
+    </div>
 <!-----------------------------ABOUT SECTION----------------->
   </section>
   <section id="about" class="about">
     <div class="container" data-aos="fade-up">
       <div class="section-title">
         <h2>About us</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, est error minima natus voluptatum delectus magni,
-           temporibus tenetur cupiditate rerum, omnis quos voluptates consectetur a. Voluptatibus temporibus sunt nobis obcaecati
-            nisi enim non, iusto fugiat et, veniam laboriosam veritatis harum?
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam iste amet dolore tempore nobis repellendus
+           deleniti quaerat cumque ab, corporis ad facere dolor delectus dicta quae 
+          necessitatibus illum officiis eum!
         </p>
+      </div>
 <div class="row">
 <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center
 align-items-stretch position-relative">
@@ -85,9 +45,9 @@ align-items-stretch py-4 px-lg-5"></div>
 <div class="icon-box">
 <div class="icon"><i class="far fa-heart"></i></div>
 <h4 class="title"><a href="">HEALTH IS WEALTH</a></h4>
-<p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim unde optio architecto consequuntur sint,
-   doloribus reiciendis, sit possimus ut ea sed dignissimos corrupti iusto necessitatibus labore? 
-  Alias numquam provident vitae?</p>
+<p class="description">Lorem ipsum dolor sit amet 
+  consectetur adipisicing
+   elit. Aut, eum?</p>
 </div>
 <div class="icon-box">
 <div class="icon"><i class="fas fa-medkit"></i></div>
