added a little styling to the blog page

--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/kitcode.js" crossorigin="anonymous"> </script>
     <script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"> </script>
+    <link rel="stylesheet" href="index.css">
     <title>MyHealthTrail</title>
 </head>
 <body>
