--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/kitcode.js" crossorigin="anonymous"> </script>
     <script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"> </script>
+    <link rel="stylesheet" href="blog.css">
     <title>MyHealthTrail</title>
 </head>
 <body>
@@ -61,12 +62,14 @@
         </div>
       </div>
     </nav>
+<main class="body" stlye=""> 
+  <h1> CONFUSED ABOUT YOUR JOURNEY?</h1>
 
             <h2>Are you Pregnant?</h2>
             
-            <p>Everyone experience different signs of pregnancy. so
+            <p>Everyone experience different signs of pregnancy, so
               it is important not to compare yourself to someone else
-              because pregnancy symptoms varies differently.
+              because pregnancy symptoms varies.
             </p>
             
             <p>Here are 10 early signs and symptoms of pregnancy</p>
@@ -186,7 +189,7 @@
                   <li>When your pregnancy is less than 37weeks</li>
                 </ul>
               </ul>
-
+</main>
 
     <footer>
       <div class="container">
