--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg fixed-top">
+      <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">MyHealthTrail</a>
         <button
@@ -48,22 +48,18 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link" href="Services.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="signup.html">Sign Up</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link" href="login.html">Log in</a>
+              <a class="nav-link" id="signin" href="signup.html">Sign Up</a>
             </li>
           </ul>
         </div>
       </div>
-      </nav>
-    
+    </nav>
  
 <!-----------------------------ABOUT SECTION----------------->
   </section>
