updated the testimonial

--- a/index.html
+++ b/index.html
@@ -251,12 +251,15 @@
       <h2>What Our Valuable Clients Say</h2>
       <img class="quote_img" src="img/quote (1).png" alt="" />
     </div>
-    <section id="testimonials_carousel">
-      <div
+
+    <div class="row">
+
+      <section id="testimonials_carousel">
+        <div
         id="testimonial-carousel"
         class="carousel slide"
         data-bs-ride="false"
-      >
+        >
         <div class="carousel_in carousel-inner">
           <div class="carousel_text carousel-item active">
             <i class="fa-solid fa-quote-left"></i>
@@ -267,24 +270,24 @@
               going through, what was normal, healthy habits, etc.
             </p>
             <img
-              class="testimonial-img"
+            class="testimonial-img"
               src="img/woman (2).png"
               alt="lady-profile"
-            />
-            <p>
-              <strong>Grace Aguta</strong> <br />
-              Nairobi, Kenya.
-            </p>
-          </div>
-          <div class="carousel_text carousel-item">
-            <i class="fa-solid fa-quote-left"></i>
-            <p class="testimonial-text">
-              It was a wonderful experience on this site. Very understandable,
-              easily accessible, and knowledge platform. One of the consultants,
-              explained everything that was confusing to me via the site. So
-              that I felt more confident and did not worry about my condition.
-            </p>
-            <img
+              />
+              <p>
+                <strong>Grace Aguta</strong> <br />
+                Nairobi, Kenya.
+              </p>
+            </div>
+            <div class="carousel_text carousel-item">
+              <i class="fa-solid fa-quote-left"></i>
+              <p class="testimonial-text">
+                It was a wonderful experience on this site. Very understandable,
+                easily accessible, and knowledge platform. One of the consultants,
+                explained everything that was confusing to me via the site. So
+                that I felt more confident and did not worry about my condition.
+              </p>
+              <img
               class="testimonial-img"
               src="img/woman (2).png"
               alt="lady-profile"
@@ -303,9 +306,9 @@
               got from any other doctor. I was really grateful for his care.
             </p>
             <img
-              class="testimonial-img"
-              src="img/woman (2).png"
-              alt="lady-profile"
+            class="testimonial-img"
+            src="img/woman (2).png"
+            alt="lady-profile"
             />
             <p>
               <strong>Nadia Enam</strong> <br />
@@ -313,13 +316,13 @@
             </p>
           </div>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#testimonial-carousel"
-          data-bs-slide="prev"
+        <!-- <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#testimonial-carousel"
+        data-bs-slide="prev"
         >
-          <span
+        <span
             class="carousel_btn carousel-control-prev-icon"
             aria-hidden="true"
           ></span>
@@ -330,15 +333,194 @@
           type="button"
           data-bs-target="#testimonial-carousel"
           data-bs-slide="next"
+          >
+          <span
+          class="carousel_btn carousel-control-next-icon"
+          aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Next</span>
+        </button> -->
+      </div>
+    </section>
+    
+    <section id="testimonials_carousel">
+      <div
+      id="testimonial-carousel"
+      class="carousel slide"
+      data-bs-ride="false"
+      >
+      <div class="carousel_in carousel-inner">
+          <div class="carousel_text carousel-item ">
+            <i class="fa-solid fa-quote-left"></i>
+            <p class="testimonial-text">
+              When I first found out I was pregnant, of course I felt excited
+              but also pretty nervous! MyHealthTrail was an informative and
+              interesting site where I could learn more about what my body was
+              going through, what was normal, healthy habits, etc.
+            </p>
+            <img
+            class="testimonial-img"
+            src="img/woman (2).png"
+            alt="lady-profile"
+            />
+            <p>
+              <strong>Grace Aguta</strong> <br />
+              Nairobi, Kenya.
+            </p>
+          </div>
+          <div class="carousel_text carousel-item active">
+            <i class="fa-solid fa-quote-left"></i>
+            <p class="testimonial-text">
+              It was a wonderful experience on this site. Very understandable,
+              easily accessible, and knowledge platform. One of the consultants,
+              explained everything that was confusing to me via the site. So
+              that I felt more confident and did not worry about my condition.
+            </p>
+            <img
+            class="testimonial-img"
+            src="img/woman (2).png"
+            alt="lady-profile"
+            />
+            <p>
+              <strong>Sally John</strong> <br />
+              Lagos, Nigeria.
+            </p>
+          </div>
+          <div class="carousel_text carousel-item">
+            <i class="fa-solid fa-quote-left"></i>
+            <p class="testimonial-text">
+              I was able to chat with one of the consultants regarding my
+              problem last week and it was great how he put my mind at ease and
+              explained everything carefully with a lot of detail, that I never
+              got from any other doctor. I was really grateful for his care.
+            </p>
+            <img
+            class="testimonial-img"
+            src="img/woman (2).png"
+            alt="lady-profile"
+            />
+            <p>
+              <strong>Nadia Enam</strong> <br />
+              Accra, Ghana.
+            </p>
+          </div>
+        </div>
+        <!-- <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#testimonial-carousel"
+        data-bs-slide="prev"
+        >
+        <span
+        class="carousel_btn carousel-control-prev-icon"
+        aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#testimonial-carousel"
+        data-bs-slide="next"
         >
           <span
             class="carousel_btn carousel-control-next-icon"
             aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Next</span>
+          </button> -->
+        </div>
+      </section>
+      
+      <section id="testimonials_carousel">
+        <div
+        id="testimonial-carousel"
+        class="carousel slide"
+        data-bs-ride="false"
+      >
+        <div class="carousel_in carousel-inner">
+          <div class="carousel_text carousel-item ">
+            <i class="fa-solid fa-quote-left"></i>
+            <p class="testimonial-text">
+              When I first found out I was pregnant, of course I felt excited
+              but also pretty nervous! MyHealthTrail was an informative and
+              interesting site where I could learn more about what my body was
+              going through, what was normal, healthy habits, etc.
+            </p>
+            <img
+            class="testimonial-img"
+            src="img/woman (2).png"
+              alt="lady-profile"
+            />
+            <p>
+              <strong>Grace Aguta</strong> <br />
+              Nairobi, Kenya.
+            </p>
+          </div>
+          <div class="carousel_text carousel-item">
+            <i class="fa-solid fa-quote-left"></i>
+            <p class="testimonial-text">
+              It was a wonderful experience on this site. Very understandable,
+              easily accessible, and knowledge platform. One of the consultants,
+              explained everything that was confusing to me via the site. So
+              that I felt more confident and did not worry about my condition.
+            </p>
+            <img
+            class="testimonial-img"
+            src="img/woman (2).png"
+            alt="lady-profile"
+            />
+            <p>
+              <strong>Sally John</strong> <br />
+              Lagos, Nigeria.
+            </p>
+          </div>
+          <div class="carousel_text carousel-item active">
+            <i class="fa-solid fa-quote-left"></i>
+            <p class="testimonial-text">
+              I was able to chat with one of the consultants regarding my
+              problem last week and it was great how he put my mind at ease and
+              explained everything carefully with a lot of detail, that I never
+              got from any other doctor. I was really grateful for his care.
+            </p>
+            <img
+              class="testimonial-img"
+              src="img/woman (2).png"
+              alt="lady-profile"
+              />
+              <p>
+                <strong>Nadia Enam</strong> <br />
+                Accra, Ghana.
+              </p>
+            </div>
+          </div>
+          <!-- <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#testimonial-carousel"
+          data-bs-slide="prev"
+        >
+          <span
+            class="carousel_btn carousel-control-prev-icon"
+            aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Previous</span>
+        </button> -->
+        <!-- <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#testimonial-carousel"
+          data-bs-slide="next"
+          >
+          <span
+          class="carousel_btn carousel-control-next-icon"
+          aria-hidden="true"
           ></span>
           <span class="visually-hidden">Next</span>
-        </button>
+        </button> -->
       </div>
     </section>
+  </div>
 
     <footer>
       <div class="container">
