modified the contact section and removed services from the nav bar

--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Services.html">Services</a>
+              <a class="nav-link" href="Services.html">Find a Consultant</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="faq.html">FAQ</a>
