--- a/about.html
+++ b/about.html
@@ -87,20 +87,21 @@ align-items-stretch py-4 px-lg-5"></div>
 <div class="icon-box">
 <div class="icon"><i class="far fa-heart"></i></div>
 <h4 class="title"><a href="">HEALTH IS WEALTH</a></h4>
-<p class="description">Lorem ipsum dolor sit amet 
-  consectetur adipisicing
-   elit. Aut, eum?</p>
+<p class="description">The moment a child is born, a mother is born.We provide quality facilities for both mother and child<br>
+    to ensure all process are successful</p>
 </div>
 <div class="icon-box">
 <div class="icon"><i class="fas fa-medkit"></i></div>
 <h4 class="title"><a href="">EMERGENCY</a></h4>
-<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-   Culpa aperiam consequuntur maxime eligendi sequi quo.</p>
+<p class="description">A C-section requires courage. It is a show of bravery, sacrifice, and mothering in its purest form. <br>
+    It’s the willingness to lay down your body and risk your life so that your child might be born;<br>that your child might live..</p>
 </div>
 <div class="icon-box">
 <div class="icon"><i class="fas fa-info-circle"></i></div>
 <h4 class="title"><a href="">SERVICES</a></h4>
-<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia distinctio numquam sequi.
+<p class="description">We offer the best and swift services as everyone experience different signs of pregnancy<br>so
+              it is important not to compare yourself to someone else
+              because pregnancy symptoms varies.
 </p>
 </div>
     </div>
