added actual images

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     ></script>
     <title>MyHealthTrail</title>
   </head>
+
   <body>
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
@@ -60,8 +61,7 @@
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -91,6 +91,8 @@
         </div>
       </div>
     </nav>
+
+    <!-- HERO SECTION -->
     <div class="row hero d-sm">
       <div class="col-sm-6">
         <h2>👋 Welcome to MyHealthTrail</h2>
@@ -115,58 +117,58 @@
         >
       </div>
     </div>
+
+    <div class="mission d-flex">
+      <div class="first"><h1>MISSION</h1></div>
+      <div class="second">
+        <h2>
+          Our mission is to make quality healthcare easily accessible to expectant and postpartum moms right on thier digital devices. In alignment with the third goal of SDGs we aim 
+          to contribute to the reduction in healthcare wait time, lack of access to 
+          personal health records and ultimately the high rate of maternal mortality by providing a platform of verfied, carefully selected local and international doctors and 
+          dieticians/nutritionists for expactant and postpartum moms to get fast medical and dietary consultations and second opinions
+        </h2>
       </div>
-<div class="mission d-flex">
-  <div class="first"><h1>MISSION</h1></div>
-<div class="second">
-  <h2>
-    Our mission is to make quality healthcare easily accessible to expectant and postpartum moms right on thier digital devices. In alignment with the third goal of SDGs we aim 
-    to contribute to the reduction in healthcare wait time, lack of access to 
-    personal health records and ultimately the high rate of maternal mortality by providing a platform of verfied, carefully selected local and international doctors and 
-    dieticians/nutritionists for expactant and postpartum moms to get fast medical and dietary consultations and second opinions
-  </h2>
-</div>
-</div>
-      <div class="main-container">
-        <div class="container text-center">
+    </div>
+
+    <div class="main-container">
+      <div class="container text-center">
   
-          <h1 style="color: red;">How it works</h1>
-  
-          <div class="row">
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">smartphone</i>
-                <div class="container">
-                  <h6>Sign up or sign in</h6> 
-                  <p>Sign up or sign in to our site with your phone, tablet, or laptop</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">folder</i>
-                <div class="container">
-                  <h6>Check through our directory of local and International doctors and Dietitians/Nutritionists</h6> 
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">person</i>
-                <div class="container">
-                  <h6>Pick the consultant you want and schedule your consultation time</h6> 
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">phone</i>
-                <div class="container">
-                  <h6>Join the consultation room via the agreed channel; audio, video, or chat</h6> 
-                </div>
+        <h1 style="color: red;">How it works</h1>
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">smartphone</i>
+              <div class="container">
+                <h6>Sign up or sign in</h6> 
+                <p>Sign up or sign in to our site with your phone, tablet, or laptop</p>
               </div>
             </div>
           </div>
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">folder</i>
+              <div class="container">
+                <h6>Check through our directory of local and International doctors and Dietitians/Nutritionists</h6> 
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">person</i>
+              <div class="container">
+                <h6>Pick the consultant you want and schedule your consultation time</h6> 
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">phone</i>
+              <div class="container">
+                <h6>Join the consultation room via the agreed channel; audio, video, or chat</h6> 
+              </div>
+            </div>
+          </div>
+        </div>
         <h3 style="padding: 20px">For consultants;</h3>
         <div class="row">
           <div class="col-sm-3">
@@ -218,34 +220,42 @@
       <img class="quote_img" src="img/quote (1).png" alt="" />
     </div>
 
-    <div class="row">
-
+    <div class="row testimonials_row">
       <section id="testimonials_carousel">
         <div
-        id="testimonial-carousel"
-        class="carousel slide"
-        data-bs-ride="false"
-        >
-        <div class="carousel_in carousel-inner">
-          <div class="carousel_text carousel-item active">
-            <i class="fa-solid fa-quote-left"></i>
-            <p class="testimonial-text">
-              When I first found out I was pregnant, of course I felt excited
-              but also pretty nervous! MyHealthTrail was an informative and
-              interesting site where I could learn more about what my body was
-              going through, what was normal, healthy habits, etc.
-            </p>
-            <img
-            class="testimonial-img"
-              src="img/woman (2).png"
-              alt="lady-profile"
+          id="testimonial-carousel"
+          class="carousel slide"
+          data-bs-ride="false">
+          <div class="carousel_in carousel-inner">
+            <div class="carousel_text first_carousel_text carousel-item active">
+              <i class="fa-solid fa-quote-left"></i>
+              <p class="testimonial-text">
+                When I first found out I was pregnant, of course I felt excited
+                but also pretty nervous! MyHealthTrail was an informative and
+                interesting site where I could learn more about what my body was
+                going through, what was normal, healthy habits, etc.
+              </p>
+              <img
+                class="testimonial-img"
+                src="img/fourth-woman.png"
+                alt="lady-profile"
               />
               <p>
                 <strong>Grace Aguta</strong> <br />
                 Nairobi, Kenya.
               </p>
             </div>
-            <div class="carousel_text carousel-item">
+          </div>
+        </div>
+      </section>
+      <section id="testimonials_carousel">
+        <div
+          id="testimonial-carousel"
+          class="carousel slide"
+          data-bs-ride="false"
+          >
+          <div class="carousel_in carousel-inner">
+            <div class="carousel_text carousel-item active">
               <i class="fa-solid fa-quote-left"></i>
               <p class="testimonial-text">
                 It was a wonderful experience on this site. Very understandable,
@@ -254,205 +264,36 @@
                 that I felt more confident and did not worry about my condition.
               </p>
               <img
-              class="testimonial-img"
-              src="img/woman (2).png"
-              alt="lady-profile"
-            />
-            <p>
-              <strong>Sally John</strong> <br />
-              Lagos, Nigeria.
-            </p>
+                class="testimonial-img"
+                src="img/second-woman.png"
+                alt="lady-profile"
+              />
+              <p>
+                <strong>Sally John</strong> <br />
+                Lagos, Nigeria.
+              </p>
+            </div>
           </div>
-          <div class="carousel_text carousel-item">
-            <i class="fa-solid fa-quote-left"></i>
-            <p class="testimonial-text">
-              I was able to chat with one of the consultants regarding my
-              problem last week and it was great how he put my mind at ease and
-              explained everything carefully with a lot of detail, that I never
-              got from any other doctor. I was really grateful for his care.
-            </p>
-            <img
-            class="testimonial-img"
-            src="img/woman (2).png"
-            alt="lady-profile"
-            />
-            <p>
-              <strong>Nadia Enam</strong> <br />
-              Accra, Ghana.
-            </p>
-          </div>
-        </div>
-        <!-- <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#testimonial-carousel"
-        data-bs-slide="prev"
-        >
-        <span
-            class="carousel_btn carousel-control-prev-icon"
-            aria-hidden="true"
-          ></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#testimonial-carousel"
-          data-bs-slide="next"
-          >
-          <span
-          class="carousel_btn carousel-control-next-icon"
-          aria-hidden="true"
-          ></span>
-          <span class="visually-hidden">Next</span>
-        </button> -->
-      </div>
-    </section>
-    
-    <section id="testimonials_carousel">
-      <div
-      id="testimonial-carousel"
-      class="carousel slide"
-      data-bs-ride="false"
-      >
-      <div class="carousel_in carousel-inner">
-          <div class="carousel_text carousel-item ">
-            <i class="fa-solid fa-quote-left"></i>
-            <p class="testimonial-text">
-              When I first found out I was pregnant, of course I felt excited
-              but also pretty nervous! MyHealthTrail was an informative and
-              interesting site where I could learn more about what my body was
-              going through, what was normal, healthy habits, etc.
-            </p>
-            <img
-            class="testimonial-img"
-            src="img/woman (2).png"
-            alt="lady-profile"
-            />
-            <p>
-              <strong>Grace Aguta</strong> <br />
-              Nairobi, Kenya.
-            </p>
-          </div>
-          <div class="carousel_text carousel-item active">
-            <i class="fa-solid fa-quote-left"></i>
-            <p class="testimonial-text">
-              It was a wonderful experience on this site. Very understandable,
-              easily accessible, and knowledge platform. One of the consultants,
-              explained everything that was confusing to me via the site. So
-              that I felt more confident and did not worry about my condition.
-            </p>
-            <img
-            class="testimonial-img"
-            src="img/woman (2).png"
-            alt="lady-profile"
-            />
-            <p>
-              <strong>Sally John</strong> <br />
-              Lagos, Nigeria.
-            </p>
-          </div>
-          <div class="carousel_text carousel-item">
-            <i class="fa-solid fa-quote-left"></i>
-            <p class="testimonial-text">
-              I was able to chat with one of the consultants regarding my
-              problem last week and it was great how he put my mind at ease and
-              explained everything carefully with a lot of detail, that I never
-              got from any other doctor. I was really grateful for his care.
-            </p>
-            <img
-            class="testimonial-img"
-            src="img/woman (2).png"
-            alt="lady-profile"
-            />
-            <p>
-              <strong>Nadia Enam</strong> <br />
-              Accra, Ghana.
-            </p>
-          </div>
-        </div>
-        <!-- <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#testimonial-carousel"
-        data-bs-slide="prev"
-        >
-        <span
-        class="carousel_btn carousel-control-prev-icon"
-        aria-hidden="true"
-          ></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#testimonial-carousel"
-        data-bs-slide="next"
-        >
-          <span
-            class="carousel_btn carousel-control-next-icon"
-            aria-hidden="true"
-            ></span>
-            <span class="visually-hidden">Next</span>
-          </button> -->
         </div>
       </section>
-      
       <section id="testimonials_carousel">
         <div
-        id="testimonial-carousel"
-        class="carousel slide"
-        data-bs-ride="false"
-      >
-        <div class="carousel_in carousel-inner">
-          <div class="carousel_text carousel-item ">
-            <i class="fa-solid fa-quote-left"></i>
-            <p class="testimonial-text">
-              When I first found out I was pregnant, of course I felt excited
-              but also pretty nervous! MyHealthTrail was an informative and
-              interesting site where I could learn more about what my body was
-              going through, what was normal, healthy habits, etc.
-            </p>
-            <img
-            class="testimonial-img"
-            src="img/woman (2).png"
-              alt="lady-profile"
-            />
-            <p>
-              <strong>Grace Aguta</strong> <br />
-              Nairobi, Kenya.
-            </p>
-          </div>
-          <div class="carousel_text carousel-item">
-            <i class="fa-solid fa-quote-left"></i>
-            <p class="testimonial-text">
-              It was a wonderful experience on this site. Very understandable,
-              easily accessible, and knowledge platform. One of the consultants,
-              explained everything that was confusing to me via the site. So
-              that I felt more confident and did not worry about my condition.
-            </p>
-            <img
-            class="testimonial-img"
-            src="img/woman (2).png"
-            alt="lady-profile"
-            />
-            <p>
-              <strong>Sally John</strong> <br />
-              Lagos, Nigeria.
-            </p>
-          </div>
-          <div class="carousel_text carousel-item active">
-            <i class="fa-solid fa-quote-left"></i>
-            <p class="testimonial-text">
-              I was able to chat with one of the consultants regarding my
-              problem last week and it was great how he put my mind at ease and
-              explained everything carefully with a lot of detail, that I never
-              got from any other doctor. I was really grateful for his care.
-            </p>
-            <img
-              class="testimonial-img"
-              src="img/woman (2).png"
-              alt="lady-profile"
+          id="testimonial-carousel"
+          class="carousel slide"
+          data-bs-ride="false">
+          <div class="carousel_in carousel-inner">
+            <div class="carousel_text carousel-item active">
+              <i class="fa-solid fa-quote-left"></i>
+              <p class="testimonial-text">
+                I was able to chat with one of the consultants regarding my
+                problem last week and it was great how he put my mind at ease and
+                explained everything carefully with a lot of detail, that I never
+                got from any other doctor. I was really grateful for his care.
+              </p>
+              <img
+                class="testimonial-img"
+                src="img/third-woman.png"
+                alt="lady-profile"
               />
               <p>
                 <strong>Nadia Enam</strong> <br />
@@ -460,33 +301,9 @@
               </p>
             </div>
           </div>
-          <!-- <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#testimonial-carousel"
-          data-bs-slide="prev"
-        >
-          <span
-            class="carousel_btn carousel-control-prev-icon"
-            aria-hidden="true"
-          ></span>
-          <span class="visually-hidden">Previous</span>
-        </button> -->
-        <!-- <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#testimonial-carousel"
-          data-bs-slide="next"
-          >
-          <span
-          class="carousel_btn carousel-control-next-icon"
-          aria-hidden="true"
-          ></span>
-          <span class="visually-hidden">Next</span>
-        </button> -->
-      </div>
-    </section>
-  </div>
+        </div>
+      </section>
+    </div>
 
     <footer>
       <div class="container">
