added our mission

--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
         </form>
         </div>
         <div class="col-sm-6">
-          <img src="images/contact.jpg" width="400px" height="400px"/>
+          <img src="images/contact 1.jpg" width="400px" height="400px"/>
         </div>
   </div>
   </div>
