--- a/index.html
+++ b/index.html
@@ -93,7 +93,17 @@
 <a href="/contact.html" title="contact" class="btn btn-branding mt-2">Book an appointment</a>
     </div>
       </div>
-
+<div class="mission d-flex">
+  <div class="first"><h1>MISSION</h1></div>
+<div class="second">
+  <h2>
+    Our mission is to make quality healthcare easily accessible to expectant and postpartum moms right on thier digital devices. In alignment with the third goal of SDGs we aim 
+    to contribute to the reduction in healthcare wait time, lack of access to 
+    personal health records and ultimately the high rate of maternal mortality by providing a platform of verfied, carefully selected local and international doctors and 
+    dieticians/nutritionists for expactant and postpartum moms to get fast medical and dietary consultations and second opinions
+  </h2>
+</div>
+</div>
       <div class="main-container">
         <div class="container text-center">
   
